// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateItem component DateItem snapshot test should render correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "height": 40,
      "opacity": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Roboto-Medium",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        Object {
          "color": "white",
        },
      ]
    }
  >
    Today
  </Text>
  <View
    style={
      Object {
        "marginLeft": "auto",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "Roboto-Medium",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          Object {
            "color": "white",
          },
        ]
      }
    >
      22 Apr
    </Text>
  </View>
</View>
`;

exports[`DateItem component DateItem snapshot test should render correctly 2`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "height": 40,
      "opacity": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Roboto-Medium",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        Object {
          "color": "white",
        },
      ]
    }
  >
    Pick a date
  </Text>
  <View
    style={
      Object {
        "marginLeft": "auto",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#04142F",
            "fontFamily": "Roboto-Regular",
            "fontSize": 16,
            "letterSpacing": 0.32,
            "lineHeight": 24,
          },
          Object {
            "color": "#8A94A6",
          },
        ]
      }
    >
      <View>
        <Text
          style={
            Object {
              "color": "#8A94A6",
              "fontFamily": "alldone",
              "fontSize": 24,
              "opacity": 1,
            }
          }
        >
          
        </Text>
      </View>
    </Text>
  </View>
</View>
`;
